Add event listner to keyup client manage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 
-<app-model1 [elemColor]="elem_Color" 
-            [elemModel]="elem_Model">
-          </app-model1>
+<div tabindex="0" id="main-container">
+  <app-model1 [elemColor]="elem_Color" 
+              [elemModel]="elem_Model">
+  </app-model1>
+</div>
