set up key press to rotate elem

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 
 <div tabindex="0" id="main-container">
-  <app-model1 [elemColor]="elem_Color" 
-              [elemModel]="elem_Model">
+  <app-model1
+    [elemRotate]="rotateLeftSubject"
+    [elemColor]="elem_Color" 
+    [elemModel]="elem_Model">
   </app-model1>
 </div>
